--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -23,14 +23,14 @@
             </view>
             <view class="input-group {{vcode_focus ? 'active' : ''}}">
               <text class="input-label">验证码</text>
-              <input id='vcode' name='vcode' type='text' cursor-spacing="30" placeholder="输入验证码"  bindfocus="inputFocus" bindblur="inputBlur"/>
+              <input id='vcode' name='vcode' type='text' cursor-spacing="30" placeholder="输入验证码" bindfocus="inputFocus" bindblur="inputBlur" />
               <view class="weui-cell__ft">
                 <image class="weui-vcode-img" src="{{PreInfo.vcode}}" style="width: 90px;height:25px;"></image>
               </view>
             </view>
             <view class="login-help">
               <view bindtap="showHelp">
-                <text>帮助</text>
+                <text>帮助 | 重置密码</text>
                 <image class="login-help-img" src="/images/help.png"></image>
               </view>
             </view>
@@ -49,16 +49,40 @@
               <view class="help-q">1、学号和密码是什么？</view>
               <view class="help-a">
                 <text>学号：学号就是你的教务学号。</text>
-                <text>密码：您设定的新教务系统的登录密码。</text>
+                <text>密码：您设定的教务系统的登录密码。</text>
               </view>
               <view class="help-q">2、忘记密码？</view>
               <view class="help-a">
-                  <text>去教务系统重新找回，实在不行就去12教找教务处老师,就说你要重置教务系统密码</text>
+                <text bindtap="resetPassword" style="color:#8E54EC;">点击这里，重置教务系统密码。重置后密码为身份证号码后6位，请及时修改</text>
               </view>
               <view class="help-q">3、大一新生？暂时还没有学号😥</view>
               <view class="help-a">
                 <text>请耐心等待教务部门注册学籍，办理学生证，然后你就有学号啦。(不要企图用高考考生号登录成功)</text>
               </view>
+            </view>
+          </view>
+        </view>
+
+        <view class="help" id="help" wx:if="{{reset_status}}" bindtap="tapHelp">
+          <view class="box">
+            <view class="box-hd">
+              <text class="box-title">修改密码</text>
+              <image class="box-close" src="/images/close.png" bindtap="hideReset"></image>
+            </view>
+            <view class="box-bd">
+              <form class="login-form" bindsubmit="resetPasswordForm">
+                <view class="input-group  {{resetUid_focus ? 'active' : ''}}">
+                  <text class="input-label">学号</text>
+                  <input name='resetUid' id="resetUid" type="number" cursor-spacing="30" placeholder="请输入你的学号" bindinput='UidInput' bindfocus="inputFocus" bindblur="inputBlur" />
+                </view>
+                <view class="input-group  {{idCardNO_focus ? 'active' : ''}}">
+                  <text class="input-label">身份证</text>
+                  <input name='idCardNO' id="idCardNO" type="text" cursor-spacing="30" placeholder="身份证号,有X大写" bindfocus="inputFocus" bindblur="inputBlur" />
+                </view>
+                <view>
+                  <button formType="submit" class="login-btn">重置密码</button>
+                </view>
+              </form>
             </view>
           </view>
         </view>
