--- a/pages/classQuery/jskb.wxss
+++ b/pages/classQuery/jskb.wxss
@@ -1,409 +1,447 @@
 /* pages/classQuery/jskb.wxss */
+
 .container {
-    background: #f7f7f7;
+  background: #f7f7f7;
 }
-.container.home{
-    align-items: center;
+
+.container.home {
+  align-items: center;
 }
 
 /**首屏**/
+
 .home .xs-logo {
-    width: 100px;
-    height: 100px;
-    opacity: .9;
-    margin: 100rpx 0 30rpx;
-    background-image: url('https://z4a.net/images/2019/10/04/-148cb43dcd1154a73.png');
+  width: 100px;
+  height: 100px;
+  opacity: 0.9;
+  margin: 100rpx 0 30rpx;
+  background-image: url('https://z4a.net/images/2019/10/04/-148cb43dcd1154a73.png');
 }
-.home .search-input{
-    position: relative;
-    display: flex;
-    width: 92%;
-    margin: 0 4%;
-    height: 75rpx;
-    box-shadow: 5rpx 5rpx 15rpx #e2e2e2;
-    transition: all .15s ease-in-out;
+
+.home .search-input {
+  position: relative;
+  display: flex;
+  width: 92%;
+  margin: 0 4%;
+  height: 75rpx;
+  box-shadow: 5rpx 5rpx 15rpx #e2e2e2;
+  transition: all 0.15s ease-in-out;
 }
-.home .search-input:focus{
-    box-shadow: 5rpx 5rpx 20rpx #d2d2d2;
+
+.home .search-input:focus {
+  box-shadow: 5rpx 5rpx 20rpx #d2d2d2;
 }
-.home .search-icon-box{
-    position: absolute;
-    z-index: 1;
-    top: 50%;
-    left: 20rpx;
-    width: 38rpx;
-    height: 38rpx;
-    margin-top: -16rpx;
+
+.home .search-icon-box {
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  left: 20rpx;
+  width: 38rpx;
+  height: 38rpx;
+  margin-top: -16rpx;
 }
-.home .input-form{
-    position: relative;
-    background: #fff;
-    flex: 1;
-    display: flex;
-    height: 100%;
-    padding-right: 110rpx;
+
+.home .input-form {
+  position: relative;
+  background: #fff;
+  flex: 1;
+  display: flex;
+  height: 100%;
+  padding-right: 110rpx;
 }
-.home .input-text{
-    position: absolute;
-    left: 0;
-    right: 0;
-    flex: 1;
-    display: flex;
-    height: 100%;
-    padding: 0 160rpx 0 70rpx;
-    font-size: 11pt;
-    line-height: 150%;
+
+.home .input-text {
+  position: absolute;
+  left: 0;
+  right: 0;
+  flex: 1;
+  display: flex;
+  height: 100%;
+  padding: 0 160rpx 0 70rpx;
+  font-size: 11pt;
+  line-height: 150%;
 }
+
 .input-placeholder {
-    color: #ccc;
-    font-size: 11pt;
-    line-height: 150%;
+  color: #ccc;
+  font-size: 11pt;
+  line-height: 150%;
 }
-button{
-    font-size: 11pt;
-    background: transparent;
-    line-height: 150%;
-    border-radius: 0;
-    padding: 0;
-    border: none;
+
+button {
+  font-size: 11pt;
+  background: transparent;
+  line-height: 150%;
+  border-radius: 0;
+  padding: 0;
+  border: none;
 }
-button::after{
-    display: none;
+
+button::after {
+  display: none;
 }
-.home .input-clear-button{
-    position: absolute;
-    z-index: 1;
-    top: 50%;
-    right: 115rpx;
-    padding: 15rpx;
-    margin-top: -30rpx;
+
+.home .input-clear-button {
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  right: 115rpx;
+  padding: 15rpx;
+  margin-top: -30rpx;
 }
-.home .input-clear-button:active{
-    opacity: .8;
+
+.home .input-clear-button:active {
+  opacity: 0.8;
 }
-.home .clear-icon{
-    width: 30rpx;
-    height: 30rpx;
+
+.home .clear-icon {
+  width: 30rpx;
+  height: 30rpx;
 }
-.home .input-confirm-button{
-    position: absolute;
-    z-index: 1;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    height: 75rpx;
-    width: 110rpx;
-    background: #9f8bea;
-    color: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    opacity: 1;
+
+.home .input-confirm-button {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  height: 75rpx;
+  width: 110rpx;
+  background: #9f8bea;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 1;
 }
-.home .input-confirm-button:active{
-    opacity: .8;
+
+.home .input-confirm-button:active {
+  opacity: 0.8;
 }
 
 /* ==========================================================================
    header
  ============================================================================ */
-.header {
 
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.header {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.active .header{
-    position: fixed;
-    top: 0;
-    left: 0;
-    min-height: 85rpx;
-    background-color: #fff;
+
+.active .header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  min-height: 85rpx;
+  background-color: #fff;
 }
-.active .xs-logo{
-    display: none;
+
+.active .xs-logo {
+  display: none;
 }
+
 /* search-input
  ============================================================================ */
-.active .search-input {
 
-    position: absolute;
-    z-index: 100;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 85rpx;
+.active .search-input {
+  position: absolute;
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 85rpx;
 }
-    .active .search-icon-box{
-        position: absolute;
-        top: 0;
-        left: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 0 20rpx;
-        height: 85rpx;
-    }
-    .active .input-form {
-        flex: 1;
-        display: flex;
-        position: relative;
-        height: 85rpx;
-    }
-    .active .input-text {
-        
-        flex: 1;
-        position: absolute;
-        left: 0;
-        right: 0;
-        font-size: 11pt;
-        line-height: 150%;
-        box-sizing: border-box;
-        width: 100%;
-        height: 85rpx;
-        padding: 0 180rpx 0 70rpx;
-    }
-    .active .input-clear-button{
-        position: absolute;
-        top: 0;
-        right: 105rpx;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 0 20rpx;
-        height: 85rpx;
-        opacity: .95;
-    }
-    .active .input-clear-button .clear-icon{
-        width: 30rpx;
-        height: 30rpx;
-    }
-    .active .input-confirm-button {
-        position: absolute;
-        top: 0;
-        right: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 0 20rpx 0 10rpx;
-        height: 85rpx;
-        opacity: .95;
-    }
-    .active .input-confirm-button text{
-        font-size: 10pt;
-        background: #9f8bea;
-        color: #fff;
-        border-radius: 3px; 
-        padding: 3rpx 15rpx;
-    }
-    .active .input-confirm-button:active{
-        opacity: .8;
-    }
+
+.active .search-icon-box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 20rpx;
+  height: 85rpx;
+}
+
+.active .input-form {
+  flex: 1;
+  display: flex;
+  position: relative;
+  height: 85rpx;
+}
+
+.active .input-text {
+  flex: 1;
+  position: absolute;
+  left: 0;
+  right: 0;
+  font-size: 11pt;
+  line-height: 150%;
+  box-sizing: border-box;
+  width: 100%;
+  height: 85rpx;
+  padding: 0 180rpx 0 70rpx;
+}
+
+.active .input-clear-button {
+  position: absolute;
+  top: 0;
+  right: 105rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 20rpx;
+  height: 85rpx;
+  opacity: 0.95;
+}
+
+.active .input-clear-button .clear-icon {
+  width: 30rpx;
+  height: 30rpx;
+}
+
+.active .input-confirm-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 20rpx 0 10rpx;
+  height: 85rpx;
+  opacity: 0.95;
+}
+
+.active .input-confirm-button text {
+  font-size: 10pt;
+  background: #9f8bea;
+  color: #fff;
+  border-radius: 3px;
+  padding: 3rpx 15rpx;
+}
+
+.active .input-confirm-button:active {
+  opacity: 0.8;
+}
+
 /* search-state
  ============================================================================ */
+
 .search-state {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}   
-    .search-icon {
+.search-icon {
+  width: 30rpx;
+  height: 30rpx;
+}
 
-        width: 30rpx;
-        height: 30rpx;
-    }
-    .state-text {
-        
-        margin-left: 20rpx;
-        color: #b1b1b1;
-        text-align: center;
-    }
+.state-text {
+  margin-left: 20rpx;
+  color: #b1b1b1;
+  text-align: center;
+}
 
 /* ==========================================================================
    search-message
  ============================================================================ */
+
 .search-message {
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100rpx;
 }
-    .message-title {
 
-        color: #aaa;
-    }
+.message-title {
+  color: #aaa;
+}
 
 /* ==========================================================================
    main
  ============================================================================ */
- .main {
 
-    display: flex;
-    width: 100%;
-    flex-flow: column nowrap;
-    overflow: hidden;
-    margin-top: 85rpx;
- }
-  /* main-title
+.main {
+  display: flex;
+  width: 100%;
+  flex-flow: column nowrap;
+  overflow: hidden;
+  margin-top: 85rpx;
+}
+
+/* main-title
  ============================================================================ */
+
 .main-title {
-
-    flex: 1;
-    margin: 35rpx 0 20rpx 25rpx;
+  flex: 1;
+  margin: 35rpx 0 20rpx 25rpx;
 }
-    .title-text {
-        color: #999;
-    }
-  /* main-list
+
+.title-text {
+  color: #999;
+}
+
+/* main-list
  ============================================================================ */
+
 .main-list {
-
-    display: flex;
-    flex: 1;
-    flex-flow: column nowrap;
-    align-items: stretch;
+  display: flex;
+  flex: 1;
+  flex-flow: column nowrap;
+  align-items: stretch;
 }
-    .list-item {
 
-        display: flex;
-        margin-bottom: 20rpx;
-        padding: 0 20rpx;
-        flex-flow: column nowrap;
-        align-items: stretch;
-        background-color: #fff;
-        font-size: 11pt;
-    }
-  /* main-list > item
+.list-item {
+  display: flex;
+  margin-bottom: 20rpx;
+  padding: 0 20rpx;
+  flex-flow: column nowrap;
+  align-items: stretch;
+  background-color: #fff;
+  font-size: 11pt;
+}
+
+/* main-list > item
  ============================================================================ */
+
 .item {
-
-    display: flex;
-    padding: 20rpx;
-    padding-right: 0;
-    align-items: center;
+  display: flex;
+  padding: 20rpx;
+  padding-right: 0;
+  align-items: center;
 }
-    .item-content {
 
-        flex: 1;
-        display: flex;
-        flex-flow: row nowrap;
-        justify-content: flex-start;
-        align-items: center;
-    }
-        .item-content-image {
-            
-            display: flex;
-            width: 100rpx;
-            height: 100rpx;
-        }
-        .item-content-state {
+.item-content {
+  flex: 1;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: center;
+}
 
-            margin-left: 20rpx;
-            display: flex;
-            flex-flow: column nowrap;
-            justify-content: center;
-            align-content: flex-start;
-        }
-            .content-state-name {
-                font-size: 12pt;
-                line-height: 175%;
-                letter-spacing: 1px;
-            }
-                .state-name-active {
-                    color: #8271bf;
-                }
-            .content-state-stuId {
+.item-content-image {
+  display: flex;
+  width: 100rpx;
+  height: 100rpx;
+}
 
-                color: #999;
-            }
-  /* main-list > item > list-sign
+.item-content-state {
+  margin-left: 20rpx;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-content: flex-start;
+}
+
+.content-state-name {
+  font-size: 12pt;
+  line-height: 175%;
+  letter-spacing: 1px;
+}
+
+.state-name-active {
+  color: #8271bf;
+}
+
+.content-state-stuId {
+  color: #999;
+}
+
+/* main-list > item > list-sign
  ============================================================================ */
+
 .list-sign {
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-    .list-sign-icon {
 
-        width: 30rpx;
-        height: 30rpx;
-        padding: 20rpx;
-        transition: transform .2s;
-        transform: rotate(0deg);
-    }
-    .list-sign-icon-show {
+.list-sign-icon {
+  width: 30rpx;
+  height: 30rpx;
+  padding: 20rpx;
+  transition: transform 0.2s;
+  transform: rotate(0deg);
+}
 
-        transform: rotate(180deg);
-    }
-  /* main-list > item > item-ul
+.list-sign-icon-show {
+  transform: rotate(180deg);
+}
+
+/* main-list > item > item-ul
  ============================================================================ */
+
 .item-ul {
-    
-    display: flex;
-    flex: 1;
-    flex-flow: column nowrap;
-    padding: 10rpx 30rpx 15rpx;
-    overflow: hidden;
+  display: flex;
+  flex: 1;
+  flex-flow: column nowrap;
+  padding: 10rpx 30rpx 15rpx;
+  overflow: hidden;
 }
-    .item-ul-li {
 
-        display: flex;
-        border-top: 1px solid #eee;
-        padding: 25rpx 5rpx 20rpx;
-    }
-        .ul-li-label {
-            
-            color: #888;
-            width: 48pt;
-        }
+.item-ul-li {
+  display: flex;
+  border-top: 1px solid #eee;
+  padding: 25rpx 5rpx 20rpx;
+}
 
-        .ul-li-content {
+.ul-li-label {
+  color: #888;
+  width: 48pt;
+}
 
-            flex: 1;
-        }
-        .ul-li-more{
-            color: #888;
-            font-size: 10pt;
-            padding-left: 40rpx;
-        }
-        .ul-li-kb {
-            /*background: url('/images/core/kb.png') no-repeat;*/
-            /*微信暂不支持静态bgimg文件，改用服务器url*/
-            background: url('https://we.cqu.pt/app/images/core/kb.png') no-repeat;
-            background-size: 30rpx 30rpx;
-            background-position: 0 50%;
-        }
-        .ul-li-ks {
-            /*background: url('/images/core/ks.png') no-repeat;*/
-            /*微信暂不支持静态bgimg文件，改用服务器url*/
-            background: url('https://we.cqu.pt/app/images/core/ks.png') no-repeat;
-            background-size: 30rpx 30rpx;
-            background-position: 0 50%;
-        }
+.ul-li-content {
+  flex: 1;
+}
+
+.ul-li-more {
+  color: #888;
+  font-size: 10pt;
+  padding-left: 40rpx;
+}
+
+.ul-li-kb {
+  /*background: url('/images/core/kb.png') no-repeat;*//*微信暂不支持静态bgimg文件，改用服务器url*/
+  background: url('https://we.cqu.pt/app/images/core/kb.png') no-repeat;
+  background-size: 30rpx 30rpx;
+  background-position: 0 50%;
+}
+
+.ul-li-ks {
+  /*background: url('/images/core/ks.png') no-repeat;*//*微信暂不支持静态bgimg文件，改用服务器url*/
+  background: url('https://we.cqu.pt/app/images/core/ks.png') no-repeat;
+  background-size: 30rpx 30rpx;
+  background-position: 0 50%;
+}
 
 .container.active .header-more {
-    display: none;
+  display: none;
 }
+
 .header-more {
-    display: flex;
-    flex-direction: column;
-    width: 92%;
-    margin: 0 4%;
-    padding-bottom: 20rpx;
+  display: flex;
+  flex-direction: column;
+  width: 92%;
+  margin: 0 4%;
+  padding-bottom: 20rpx;
 }
+
 .login-help {
   display: flex;
   align-items: center;
   justify-content: flex-end;
   font-size: 10pt;
   color: #bbb;
-  opacity: .8;
+  opacity: 0.8;
 }
+
 .login-help-img {
   width: 11pt;
   height: 11pt;
@@ -421,6 +459,7 @@ button::after{
   align-items: center;
   justify-content: center;
 }
+
 .box {
   position: relative;
   display: flex;
@@ -429,8 +468,9 @@ button::after{
   width: 80%;
   background: #fff;
   border-radius: 10px;
-  box-shadow: 0 0 50px rgba(22,22,22,.35);
+  box-shadow: 0 0 50px rgba(22, 22, 22, 0.35);
 }
+
 .box-hd {
   display: flex;
   align-items: center;
@@ -438,9 +478,11 @@ button::after{
   height: 100rpx;
   border-bottom: 1px solid #eee;
 }
+
 .box-title {
   font-size: 13pt;
 }
+
 .box-close {
   position: absolute;
   right: 20rpx;
@@ -448,24 +490,28 @@ button::after{
   height: 35rpx;
   padding: 15rpx;
 }
+
 .box-bd {
   flex: 1;
   display: flex;
   flex-direction: column;
   padding: 15rpx 40rpx 30rpx;
 }
+
 .help-q {
   color: #999;
   font-size: 11pt;
   line-height: 200%;
   margin-top: 5rpx;
 }
+
 .help-a {
   text-indent: 1em;
   line-height: 160%;
   display: flex;
   flex-direction: column;
 }
-.help-a text{
+
+.help-a text {
   word-break: break-all;
 }
